base/utilities/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: utilities
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homepage
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
